--- a/server_services/main_service/package.json
+++ b/server_services/main_service/package.json
@@ -12,6 +12,8 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "ioredis": "^3.2.2",
+    "redis": "^2.8.0",
     "websocket": "^1.0.23"
   }
 }
