--- a/server_services/main_service/package.json
+++ b/server_services/main_service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +20,9 @@
     "redis": "^2.8.0",
     "sequelize": "^4.32.2",
     "websocket": "^1.0.23"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
   }
 }
