--- a/server_services/main_service/package.json
+++ b/server_services/main_service/package.json
@@ -15,6 +15,8 @@
     "ioredis": "^3.2.2",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.1",
+    "make-runnable": "^1.3.6",
+    "npm": "^5.10.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "redis": "^2.8.0",
