--- a/main_service/Dockerfile
+++ b/main_service/Dockerfile
@@ -1,10 +1,13 @@
 FROM node:10
 
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/app/main_service
+WORKDIR /usr/src/app/main_service
 
-COPY package.json /usr/src/app/
+COPY main_service/package.json /usr/src/app/main_service
 RUN npm install
-COPY . /usr/src/app
+COPY ./main_service /usr/src/app/main_service
+COPY ./database /usr/src/app/database
+
+RUN cd /usr/src/app/database && npm install
 
 EXPOSE 8082
