--- a/main_service/package.json
+++ b/main_service/package.json
@@ -12,19 +12,20 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "ioredis": "^3.2.2",
-    "leveldown": "^3.0.0",
-    "levelup": "^2.0.1",
+    "fstream": "^1.0.12",
+    "leveldown": "^5.0.3",
+    "levelup": "^4.0.1",
     "make-runnable": "^1.3.6",
-    "npm": "^6.5.0",
-    "pg": "^7.4.1",
+    "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "redis": "^2.8.0",
-    "sequelize": "^4.32.2",
+    "sequelize": "^5.8.6",
+    "sequelize-cli": "^5.4.0",
+    "tar": "^4.4.8",
     "websocket": "^1.0.23"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.1"
+    "mocha": "^6.1.4"
   }
 }
