--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,35 @@
-version: "2"
+version: '3.1'
 services:
   main_service:
-    build: 
+    build:
       context: .
-      dockerfile: /main_service/Dockerfile
+      dockerfile: ./main_service/Dockerfile
     working_dir: /usr/src/app/main_service
     environment:
-      - NODE_ENV=production
-    expose:
-      - "8082"
+      NODE_ENV: production
     command: "node server.js"
     ports:
-      - "8082:8082"
+      - "8084:8084"
     restart: always
+  
   api_service:
     build: 
       context: .
-      dockerfile: /api_service/Dockerfile
+      dockerfile: ./api_service/Dockerfile
     working_dir: /usr/src/app/api_service
     environment:
-      - NODE_ENV=production
-    expose:
-      - "3000"
+      NODE_ENV: production
     command: "npm start"
     ports:
-      - "3000:3000"
+      - "3002:3002"
     restart: always 
     volumes:
       - /usr/src/app/database
+  
+  database:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: example
+    ports:
+      - "5432:5432"
